about page updated

--- a/public/partials/about.html
+++ b/public/partials/about.html
@@ -1,1 +1,7 @@
-<h1>About page</h1>
+<h2>About Github client</h2>
+<p>
+  Github client is a simple web application helps to get information of github user.
+</p>
+<p>
+  Build with ♥ and Angular.
+</p>
