--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -17,7 +17,7 @@
 	<div class="panel-body">
 		<div class="row">
 			<div class="col-md-4">
-				<img ng-show="home.user.avatar_url" src="{{ home.user.avatar_url }}" class="thumbnail" style="width: 100%" />
+				<img ng-src="{{ home.user.avatar_url }}" class="thumbnail" style="width: 100%" />
 			</div>
 			<div class="col-md-4">
 				<div class="row">
