--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -17,7 +17,7 @@
 	<div class="panel-body">
 		<div class="row">
 			<div class="col-md-4">
-				<img ng-src="{{ home.user.avatar_url }}" class="thumbnail" style="width: 100%" />
+				<img class="profile__img" ng-src="{{ home.user.avatar_url }}" alt="{{home.user.name}}" class="thumbnail"/>
 			</div>
 			<div class="col-md-4">
 				<div class="row">
